<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpotOrNot</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">SpotOrNot logo image</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_text">Login</string>
	<string name="checked_in">Checked In</string>
    <string name="check_out">Check Out</string>
    <string name="not_checked_in">Not Checked In</string>
    <string name="refresh_map">Refresh Map</string>
    <string name="checked_in_lot">You are currently checked into a lot.</string>
    
    
</resources>